--- a/index.html
+++ b/index.html
@@ -317,7 +317,17 @@ transform: scale(1, 1)">
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 72px;" class="antialias">
-<font>SOE Workshop</font>
+<font>SOE Workshop - Tag 1</font>
+</div>
+</div>
+</div>
+<div class="componentContainer " style="top: 431px; left: 257px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 54px;" class="antialias">
+<div style="text-align: center;">Gregor Schwab</div>
+<div style="text-align: center;">Leopold Franzens</div><div style="text-align: center;">Universität Innsbruck</div>
 </div>
 </div>
 </div>
