--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ transform: scale(1, 1)">
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 72px;" class="antialias">
-<font>SOE Workshop - Tag 1</font>
+<font>SOE Workshop</font>
 </div>
 </div>
 </div>
